# Vanta-Bot

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ACTION_PLAN.md  BOT202_STATUS.md  CHANGELOG.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  DELIVERY_PLAN.md  DEPENDENCIES.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  ENTERPRISE_DEPLOYMENT.md  FINAL_COMPREHENSIVE_TEST_REPORT.md  FINAL_GO_NO_GO_GATE.md  FINAL_SESSION_SUMMARY.md  FINAL_SOLUTION_SUMMARY.md  FINAL_STATUS.md  GO_NO_GO_CHECKLIST.md  LICENSE  Makefile  PHASE1_PR_CHECKLIST.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_COMPLETE.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE7_STATUS.md  PHASE9_COMPLETE.md  PHASES_BREAKDOWN.md  PHASE_STATE.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READY_SOLUTION.md  PRODUCTION_REFINEMENTS_SUMMARY.md  PROGRESS_CHECKPOINT.md  R2_PLAN.md  README.md  REFACTORING_SUMMARY.md  RISK_EDUCATION.md  RISK_EDU_PLAN.md  (+49 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: README.md  ci.yml  docker-build.yml
config/: copy_trading_schema.sql  env.prod.canary.template  feeds.json  init.sql  vanta-bot.service
config/abis/: Trading.json  Vault.json
config/addresses/: base.legacy.json  base.mainnet.json
docker/: Dockerfile.base  Dockerfile.bot  Dockerfile.indexer  Dockerfile.tpsl  Dockerfile.webhook  Dockerfile.worker  compose.yml
docs/: README.md  TESTING.md  architecture.md  avantis-sdk-integration-complete.md  avantis-sdk-integration.md  cleanup-plan.md  compatibility.md  completion.md  configuration.md  contributing.md  copy-trading-implementation.md  copy_trading.md  deployment.md  env-sync-summary.md  go-live-checklist.md  go-live-runbook.md  installation-guide.md  installation.md  phase8-final-mile-complete.md  phase8-signal-integration.md  phase8-validation-summary.md  production-hardening-checklist.md  production-hardening-implementation-summary.md  production-ready-summary.md  production-runbook.md  project-structure.md  setup-complete.md  setup.md  steps.md  technical-debt.md  troubleshooting.md
migrations/: env.py
migrations/versions/: 000000000001_baseline_schema_2025_09_30.py  001_create_fills_and_positions.py  20250930_phase1_envelope_crypto.py  20250930_phase2_tx_pipeline.py  2fd398e11c72_create_trader_positions_table.py  33bb617dfb24_phase5_user_wallets.py  72287cbdfcc1_create_fills_and_positions.py  ad1128fe1485_phase7_user_risk_and_tp_sl.py  cbf4365788a5_phase6_signals_and_executions.py  xxxx_envelope_encryption.py
models/: anomaly_detector.pkl  clustering_model.pkl  scaler.pkl
ops/: RUNBOOK.md  alerts.rules.yml  backup.sh  migrate.py  production-alerts.rules.yml
scripts/: README.md  check_avantis_sdk.py  cleanup_docs.py  database_optimize.py  deploy.sh  deploy_enterprise.py  dev_fire_signal.py  generate_key.py  load_test_nonce.py  rewrap_deks.py  sanity_checks.py  seed_database.py  setup.py  setup_ci.sh  setup_production_env.sh  synthetic_signal_cron.py  test_final_mile.py  test_oracle_e2e.py  test_validation.py  test_vault_resolver.py  use_sdk_build_trade_open_tx.py  validate_canary_config.py  validate_health_endpoints.py  validate_phase8.py  validate_production_refinements.py  verify_release.py  verify_tooling.py
src/: __init__.py
src/adapters/: __init__.py  address_guard.py  pyth_feed.py  sdk_shim.py  web3_trading.py
src/ai/: __init__.py  market_intelligence.py  trader_analyzer.py
src/analytics/: __init__.py  data_extractor.py  position_tracker.py
src/api/: __init__.py  __main__.py  schemas.py  webhook.py
src/blockchain/: abi_loader.py  avantis_client.py  avantis_sdk_integration.py  base_client.py  signer_factory.py  wallet_manager.py
src/bot/: application.py  constants.py  schemas.py
src/cli/: __init__.py  monitor_unpaused.py  open_trade.py  preflight.py
src/config/: __init__.py  feature_flags.py  feeds_config.py  feeds_loader.py  flags.py  flags_new.py  flags_standalone.py  settings.py  settings_new.py  validate.py
src/copy_trading/: __init__.py  copy_executor.py  leaderboard_service.py
src/core/: __init__.py  math.py  models.py  validation.py
src/database/: models.py  operations.py  session.py  transaction_repo.py  types.py
src/integrations/: __init__.py
src/middleware/: circuit_breakers.py  rate_limiter.py  telemetry.py
src/monitoring/: __init__.py  health.py  health_server.py  logging.py  metrics.py  performance_monitor.py
src/repositories/: __init__.py  credentials_repo.py  positions_repo.py  risk_repo.py  signals_repo.py  sync_state_repo.py  tpsl_repo.py  user_wallets_repo.py
src/security/: __init__.py  crypto.py  key_vault.py
src/services/: __init__.py  background.py  base_service.py  cache_service.py  oracle.py  oracle_base.py  position_monitor.py  price_feed_manager.py  price_service.py  risk_calculator.py  risk_manager.py  trade_service.py
src/signals/: __init__.py  rules.py
src/startup/: __init__.py  markets_validator.py  prod_checks.py  reconcile.py  validators.py
src/utils/: errors.py  logging.py  logging_clean.py  logging_new.py  logging_standalone.py  obs.py  ratelimit.py  resilience.py  supervisor.py  validators.py
src/vantabot/: __init__.py  __main__.py  app.py
src/workers/: __init__.py  signal_worker.py
tests/: README.md  __init__.py  conftest.py  test_alerts.py  test_avantis_sdk.py  test_avantis_sdk_dto.py  test_basic.py  test_compatibility.py  test_config.py  test_copy_service.py  test_copy_store.py  test_errors.py  test_execution_mode_redis.py  test_final_verification.py  test_flags.py  test_integration.py  test_main.py  test_nonce_concurrency.py  test_oracle_facade_e2e.py  test_oracle_facade_fixed.py  test_oracle_facade_simple.py  test_oracle_facade_working.py  test_oracle_integration.py  test_pnl_fifo.py  test_risk_calculator.py  test_symbols.py  verify_setup.py
tests/analytics/: conftest.py  test_insights_service.py
tests/api/: test_webhook_health.py
tests/archive/: analyze_successful_trades.py  bulletproof_trading_solution.py  check_contract_functions.py  check_feed_client.py  check_sdk_methods.py  check_tradeinput.py  clean_proxy_check.py  close_position.py  (+40 more)
(+193 files in other folders)
